--- a/bock/ui/src/Wiki.jade
+++ b/bock/ui/src/Wiki.jade
@@ -26,7 +26,7 @@ html(ng-app="Wiki" lang="en-US" direction="ltr")
                             span Home
 
                     li
-                        a(ui-sref='articles')
+                        a(ui-sref='listOfArticles')
                             i.ion-ios-copy-outline 
                             span Articles
 
