Edits to List of Articles view

--- a/bock/ui/src/styles/responsive.sass
+++ b/bock/ui/src/styles/responsive.sass
@@ -13,6 +13,12 @@
         margin-left: -$mid-side-margin!important
         margin-right: -$mid-side-margin!important
 
+    #articles
+        #articles-list
+            -webkit-columns: 2!important
+            -moz-columns: 2!important
+            columns: 2!important
+
 @media screen and (max-width: 800px)
     #container
         margin: $mobile-side-margin/2 $mobile-side-margin!important
@@ -57,9 +63,9 @@
     // List of articles
     #articles
         #articles-list
-            -webkit-columns: 1
-            -moz-columns: 1
-            columns: 1
+            -webkit-columns: 1!important
+            -moz-columns: 1!important
+            columns: 1!important
 
     #search-form
         margin: $mobile-side-margin!important
