--- a/bock/ui/src/views/articles.jade
+++ b/bock/ui/src/views/articles.jade
@@ -1,5 +1,5 @@
 #articles
-    h1 List of Articles
+    h1 List of Articles!
 
     input(ng-model="articleTitle" placeholder="Filter by title" auto-focus)
 
