--- a/bock/ui/src/styles/articles.sass
+++ b/bock/ui/src/styles/articles.sass
@@ -28,6 +28,7 @@
             color: red
             vertical-align: super
             font-size: 0.75em
+            margin-left: 0.25em
 
     a
         @include article-list-title-properties
