Rename ALL THE THINGS from "Wiki" to "Bock"

--- a/bock/ui/src/Bock.jade
+++ b/bock/ui/src/Bock.jade
@@ -1,13 +1,13 @@
-html(ng-app="Wiki" lang="en-US" direction="ltr")
+html(ng-app="Bock" lang="en-US" direction="ltr")
     head
         meta(charset="utf-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1")
 
-        title(ng-bind="($title || 'Wiki')")
+        title(ng-bind="($title || 'Bock')")
         base(href="/")
 
-        link(rel="stylesheet", href="/Wiki.css")
+        link(rel="stylesheet", href="/Bock.css")
 
     body
 
@@ -76,4 +76,4 @@ html(ng-app="Wiki" lang="en-US" direction="ltr")
                     a(href="https://github.com/afreeorange/bock")
                         i.ion-social-octocat
 
-        script(type="application/javascript", src="/Wiki.js")
+        script(type="application/javascript", src="/Bock.js")
