Change icon in footer

--- a/bock/ui/src/Bock.jade
+++ b/bock/ui/src/Bock.jade
@@ -74,6 +74,6 @@ html(ng-app="Bock" lang="en-US" direction="ltr")
                     a(href="https://nikhil.io") Nikhil Anand
                     |&nbsp;&nbsp;
                     a(href="https://github.com/afreeorange/bock")
-                        i.ion-social-octocat
+                        i.ion-beer
 
         script(type="application/javascript", src="/Bock.js")
