--- a/bock/ui/src/styles/search_results.sass
+++ b/bock/ui/src/styles/search_results.sass
@@ -1,19 +1,5 @@
 #search-no-results
-    text-align: center
-    margin: 2em auto
-
-    h1
-        @include main-heading
-        border: 0
-        font-weight: 500
-
-        span
-            font-weight: 900
-
-    h2
-        margin-top: 0.5em
-        font-size: 4em
-        color: #CCC
+    @include special-page
 
 #search-results
     h1
@@ -38,7 +24,6 @@
                 color: $link-color
 
             div
-                font-family: "Inconsolata"
                 font-size: 0.75em
                 overflow-x: auto
 
