--- a/bock/ui/src/views/404.jade
+++ b/bock/ui/src/views/404.jade
@@ -1,3 +1,5 @@
 #error
-    h1 Oh noes!
-    h2 I couldn&#8217;t find that #[i.ion-sad-outline]
+    h1
+        i.ion-sad-outline
+        |Uh-oh
+        small I couldn&#8217;t find that
