--- a/bock/ui/src/views/no_home.jade
+++ b/bock/ui/src/views/no_home.jade
@@ -1,2 +1,5 @@
-h1 You have no home, padawan
-p You don't seem to have a #[code Home.md] file. Create one for a home page!
+#no-home
+    h1
+        i.ion-ios-home-outline
+        |You have no home
+        small Create #[code Home.md] for a home page
