Adjust display of raw article
Change title font to Inconsolata

--- a/bock/ui/src/styles/raw_article.sass
+++ b/bock/ui/src/styles/raw_article.sass
@@ -1,6 +1,8 @@
 #raw
     h1
         @include main-heading
+        font-family: $monospace-font
+        border-bottom: 0
 
     pre
         border-radius: 5px
