Adjust display of search results

--- a/bock/ui/src/styles/responsive.sass
+++ b/bock/ui/src/styles/responsive.sass
@@ -19,6 +19,12 @@
             -moz-columns: 2!important
             columns: 2!important
 
+    #search-results
+        ul
+            li
+                div
+                    font-size: 0.7em!important
+
 @media screen and (max-width: 800px)
     #container
         margin: $mobile-side-margin/2 $mobile-side-margin!important
@@ -72,6 +78,12 @@
 
         ul
             font-size: 0.75em!important
+
+    #search-results
+        ul
+            li
+                div
+                    display: none
 
 @media screen and (max-width: 340px)
     nav
