--- a/bock/ui/src/styles/search_results.sass
+++ b/bock/ui/src/styles/search_results.sass
@@ -24,7 +24,9 @@
                 color: $link-color
 
             div
-                font-size: 0.75em
+                font-size: 0.85em
+                font-family: $monospace-font
+                color: #666
                 overflow-x: auto
 
                 .match
