Add raw background to raw source

--- a/bock/ui/src/styles/responsive.sass
+++ b/bock/ui/src/styles/responsive.sass
@@ -1,4 +1,10 @@
 @media screen and (max-width: 1000px)
+    #raw
+        margin-right: -$mid-side-margin
+        margin-left: -$mid-side-margin
+        padding-right: $mid-side-margin
+        padding-left: $mid-side-margin
+
     #container
         margin: 1em $mid-side-margin!important
 
@@ -84,6 +90,12 @@
             li
                 div
                     display: none
+
+    #raw
+        margin-right: -$mobile-side-margin
+        margin-left: -$mobile-side-margin
+        padding-right: $mobile-side-margin
+        padding-left: $mobile-side-margin
 
 @media screen and (max-width: 340px)
     nav
