--- a/bock/ui/src/styles/raw_article.sass
+++ b/bock/ui/src/styles/raw_article.sass
@@ -1,4 +1,10 @@
 #raw
+    margin-right: -$side-margin
+    margin-left: -$side-margin
+    padding-right: $side-margin
+    padding-left: $side-margin
+    background: #F8F8F8
+
     h1
         @include main-heading
         font-family: $monospace-font
