Remove hanging indents

--- a/bock/ui/src/styles/article.sass
+++ b/bock/ui/src/styles/article.sass
@@ -14,33 +14,36 @@ article
         margin: 1em 0
     
     ul
-        margin: 1em 0
+        margin: 1em
 
         li
             margin: 0.5em 0
             list-style-type: disc
 
         ul
-            margin-left: 1em
 
+            li
+                list-style-type: circle
+      
             ul
-                margin-left: 1em
 
+                li
+                    list-style-type: square
+
+      
     ol
-        margin: 1em 0
+        margin: 1em
 
         li
             margin: 0.5em 0
             list-style-type: decimal
 
         ol
-            margin-left: 1em
 
             li
                 list-style-type: lower-roman
 
             ol
-                margin-left: 1em
 
                 li
                     list-style-type: lower-alpha
