--- a/bock/ui/src/styles/responsive.sass
+++ b/bock/ui/src/styles/responsive.sass
@@ -79,6 +79,10 @@
             -moz-columns: 1!important
             columns: 1!important
 
+            li
+                min-height: 1em!important
+                border-right: 0
+
     #search-form
         margin: $mobile-side-margin!important
 
