Fix right margin of search box

--- a/bock/ui/src/styles/responsive.sass
+++ b/bock/ui/src/styles/responsive.sass
@@ -10,6 +10,7 @@
 
     #search-form
         margin: $mid-side-margin!important
+        margin-right: $mid-side-margin + 1em
 
     #side-compare
         margin-left: -$mid-side-margin!important
@@ -85,6 +86,7 @@
 
     #search-form
         margin: $mobile-side-margin!important
+        margin-right: $mobile-side-margin + 1em
 
         ul
             font-size: 0.75em!important
