Remove right border

--- a/bock/ui/src/styles/articles.sass
+++ b/bock/ui/src/styles/articles.sass
@@ -29,8 +29,7 @@
         display: inline-table
         min-height: 3.5em
         width: 100%
-        border-right: 1px dotted #CCC
-        border-bottom: 1px dotted #CCC
+        border-bottom: 1px dotted #DDD
         padding-right: 0.25em
 
         i
