--- a/bock/ui/src/styles/article.sass
+++ b/bock/ui/src/styles/article.sass
@@ -163,6 +163,14 @@ article
         font-size: 0.75em
         margin: 2em 0 0 0
 
+        ol
+            li
+                line-height: 1.25
+                padding-left: 0.5em
+
+                p
+                    margin: 0.5em 0
+
         hr
             border: 0
             height: 0.25em
