Adjust display of raw article

--- a/bock/ui/src/styles/raw_article.sass
+++ b/bock/ui/src/styles/raw_article.sass
@@ -9,7 +9,9 @@
         @include main-heading
         font-family: $monospace-font
         border-bottom: 0
+        padding-top: 0.5em
 
     pre
         border-radius: 5px
         overflow-x: auto
+        padding-bottom: 1em
