Adjust display on mobile
>= 425px

--- a/bock/ui/src/styles/responsive.sass
+++ b/bock/ui/src/styles/responsive.sass
@@ -103,8 +103,19 @@
         padding-right: $mobile-side-margin
         padding-left: $mobile-side-margin
 
-@media screen and (max-width: 340px)
+@media screen and (max-width: 425px)
+    #container
+        margin-left: $mid-side-margin/3!important
+        margin-right: $mid-side-margin/3!important
+        margin-top: $mid-side-margin/6!important
+        margin-bottom: $mid-side-margin/6!important
+
     nav
+        margin-bottom: $mid-side-margin/6!important
+
+        .source-html-link
+            margin-right: $mid-side-margin/2!important
+
         ul
             li
                 margin: 0 0.65em 0 0!important
