Make monospace in headings bold

--- a/bock/ui/src/styles/article.sass
+++ b/bock/ui/src/styles/article.sass
@@ -12,7 +12,7 @@ article
 
     p
         margin: 1em 0
-    
+
     ul
         margin: 1em
 
@@ -24,13 +24,13 @@ article
 
             li
                 list-style-type: circle
-      
+
             ul
 
                 li
                     list-style-type: square
 
-      
+
     ol
         margin: 1em
 
@@ -86,7 +86,7 @@ article
 
         code
             font-family: $monospace-font
-            font-weight: normal
+            font-weight: bold
             letter-spacing: 0
 
     h1
@@ -103,12 +103,12 @@ article
         border-bottom: 1px solid #CCC
         font-weight: 700
         color: #666
-    
+
     h3
         font-size: modular-heading($modular-heading-ratio, 2) + em
         color: #999
         font-weight: 700
-    
+
     h4
         font-size: modular-heading($modular-heading-ratio, 1) + em
         font-weight: 500
@@ -135,7 +135,7 @@ article
                 border-bottom: 1px solid #DDD
                 td
                     padding: 0.25em
-            
+
             tr:nth-child(odd)
                 background: #F9F9F9
 
