--- a/bock/ui/src/styles/article.sass
+++ b/bock/ui/src/styles/article.sass
@@ -4,6 +4,16 @@ article
     position: relative
     word-wrap: break-word
 
+    mark
+        background: #ff9
+
+    sub
+        font-size: 75%
+        line-height: 0
+        position: relative
+        vertical-align: baseline
+        bottom: -.5em
+
     strong, b
         font-weight: 900
 
