--- a/bock/ui/src/styles/article.sass
+++ b/bock/ui/src/styles/article.sass
@@ -193,10 +193,11 @@ article
 
 .toc
     font-family: $heading-font
-    border-bottom: 5px double #CCC
+    border-bottom: 4px double #DDD
+    margin: 0 0 1.5em 0
 
     ul
-        margin: 0
+        margin: 0 0 1.5em 0
         font-size: 0.95em
 
         li
