--- a/bock/ui/src/styles/Bock.sass
+++ b/bock/ui/src/styles/Bock.sass
@@ -118,6 +118,7 @@ footer
             font-weight: 300
             text-decoration: none
             color: #999
+            margin-right: 0.5em
 
         a:hover
             color: $link-color
