Add syntax highlighting to Raw Article view
Use highlightjs

--- a/bock/ui/src/views/raw_article.pug
+++ b/bock/ui/src/views/raw_article.pug
@@ -1,3 +1,5 @@
 #raw
     h1 {{ ac.articleData.title }}
-    pre {{ ac.articleData.raw }}
+        i.uncommitted-icon.ion-edit(ng-show="ac.articleData.uncommitted")
+    pre
+        code(ng-bind-html="ac.articleData.raw | syntaxHighlight: 'markdown' | unsafe")
