--- a/bock/ui/src/Bock.pug
+++ b/bock/ui/src/Bock.pug
@@ -72,6 +72,7 @@ html(ng-app="Bock" lang="en-US" direction="ltr")
                     span(ui-view="lastModifiedInfo")
                     br
                     a(href="https://nikhil.io") Nikhil Anand
+                    i.ion-more &nbsp;&nbsp;
                     a(href="https://github.com/afreeorange/bock")
                         i.ion-beer
 
