--- a/bock/ui/src/Bock.pug
+++ b/bock/ui/src/Bock.pug
@@ -76,4 +76,8 @@ html(ng-app="Bock" lang="en-US" direction="ltr")
                     a(href="https://github.com/afreeorange/bock")
                         i.ion-beer
 
-        script(type="application/javascript", src="/Bock.js")
+        script(type="application/javascript" src="/Bock.js")
+        script(type="application/javascript")
+            |(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+            |ga('create', '<%= GoogleAnalyticsToken %>', 'auto');
+
