--- a/bock/ui/src/styles/Bock.sass
+++ b/bock/ui/src/styles/Bock.sass
@@ -87,12 +87,16 @@ nav
             a
                 width: 1em
                 color: #CCC
+                text-decoration: none
 
                 span
                     display: none
 
             a:hover
                 color: #FF3300
+
+    .markdown-mark
+        font-size: 0.75em
 
     .source-html-link
         position: absolute
@@ -112,13 +116,14 @@ footer
 
     p
         font-size: 0.75em
-        color: #CCC
+        color: #cccccc
 
         a
             font-weight: 300
             text-decoration: none
-            color: #999
+            color: #cccccc
             margin-right: 0.5em
+            border-bottom: 1px dotted #cccccc
 
         a:hover
             color: $link-color
