--- a/bock/ui/src/views/search.pug
+++ b/bock/ui/src/views/search.pug
@@ -1,12 +1,14 @@
 #search-overlay
     #search-form
-        h1 Search
-        
-        form(ng-submit="smc.search()")
+        h1
+            i.ion-search &nbsp;
+            |Search
+
+        form(ng-submit="smc.query.length >= 3 && smc.search()")
             input(type="text" ng-model="smc.query" auto-focus)
 
         a(ng-click="smc.dismissModal()")
-            i.ion-ios-close-outline 
+            i.ion-ios-close-outline
             span Close
 
         ul
