Add version info in footer

--- a/bock/ui/src/Bock.pug
+++ b/bock/ui/src/Bock.pug
@@ -73,6 +73,7 @@ html(ng-app="Bock" lang="en-US" direction="ltr")
                     br(ng-show="$state.is('article') || $state.is('article.revisionList.revision')")
                     a(href="https://nikhil.io") Nikhil Anand
                     i.ion-more &nbsp;&nbsp;
+                    |vBUILD_VERSION&nbsp;
                     a(href="https://github.com/afreeorange/bock")
                         i.ion-social-octocat
 
