Add Markdown highlight to revision view

--- a/bock/ui/src/views/raw_revision.pug
+++ b/bock/ui/src/views/raw_revision.pug
@@ -1,3 +1,4 @@
 #raw
     h1 {{ $stateParams.articleTitle }}
-    pre {{ rc.revision.raw }}
+    pre
+        code(ng-bind-html="rc.revision.raw | syntaxHighlight: 'markdown' | unsafe")
