--- a/bock/ui/src/styles/revisions.sass
+++ b/bock/ui/src/styles/revisions.sass
@@ -6,7 +6,7 @@
         text-decoration: none
         color: $link-color
 
-    button[disabled="disabled"]
+    button[disabled]
         background: #CCC!important
 
     button[type="submit"]
