--- a/bock/ui/src/styles/article.sass
+++ b/bock/ui/src/styles/article.sass
@@ -102,6 +102,9 @@ article
     h1
         @include main-heading
 
+        i.ion-edit
+            margin-left: 0.25em
+
     h2
         font-size: modular-heading($modular-heading-ratio, 3) + em
         border-bottom: 1px solid #CCC
