--- a/bock/ui/src/styles/articles.sass
+++ b/bock/ui/src/styles/articles.sass
@@ -57,5 +57,8 @@
                     color: #333
                     padding: 0.5em 0
 
+                i.ion-edit
+                    margin-left: 5px
+
                 a:hover
                     color: $link-color
