Add italic styles

--- a/bock/ui/src/App.css
+++ b/bock/ui/src/App.css
@@ -55,6 +55,13 @@ svg {
   vertical-align: middle;
 }
 
+em {
+  font-family: Iowan Old Style, Apple Garamond, Baskerville, Times New Roman,
+    Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji,
+    Segoe UI Emoji, Segoe UI Symbol;
+  font-size: 110%;
+}
+
 /* BADGES */
 
 h1 > span,
