--- a/template/folder.njk
+++ b/template/folder.njk
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "base.njk" %}
 
 {% block main %}
-  {% include "hierarchy.html" %}
+  {% include "hierarchy.njk" %}
 
   <h1>{{ title }}</h1>
 
