--- a/template/revision-list.njk
+++ b/template/revision-list.njk
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "base.njk" %}
 
 {% block main %}
-  {% include "hierarchy.html" %}
+  {% include "hierarchy.njk" %}
 
   {% set label = "Revision" %}
   {% set count = revisions | length %}
@@ -12,10 +12,11 @@
   <h1>
     {{ title }} <span>{{ revisions | length }} {{ label }}</span>
   </h1>
+
   <ul>
   {% for revision in revisions %}
     <li>
-      <a href="{{ revision.ShortId }}">{{ revision.Date | date:"Monday, 2 Jan 2006 at 15:04 MST" }}</a>
+      <a href="{{ revision.ShortId }}">{{ revision.Date | date:"Monday, 2 January 2006 at 15:04 MST" }}</a>
       <br />
       <small>{{ revision.Subject }}</small>
       <br />
