--- a/template/revision-list.njk
+++ b/template/revision-list.njk
@@ -16,9 +16,13 @@
   <ul>
   {% for revision in revisions %}
     <li>
-      <a href="{{ revision.ShortId }}">{{ revision.Date | date:"Monday, 2 January 2006 at 15:04 MST" }}</a>
+      <a href="{{ revision.ShortId }}" title="View revision {{ revision.ShortId }}">{{ revision.ShortId }}</a>
+      <br />
+      <small>{{ revision.Date | date:"Monday, 2 January 2006 at 15:04 MST" }}</small>
+      {% if revision.Subject %}
       <br />
       <small>{{ revision.Subject }}</small>
+      {% endif %}
       <br />
       <small>{{ revision.AuthorName }} <code>&lt;{{ revision.AuthorEmail }}&gt;</code></small>
     </li>
